--- a/user_dashboard/templates/user_dashboard/profile.html
+++ b/user_dashboard/templates/user_dashboard/profile.html
@@ -30,7 +30,7 @@
 
             <div class="row justify-content-center m-3 text-center">
                 <div class="col-12 col-md-6">
-                    <a href="#" class="btn btn-primary mt-2">Your Posts</a>
+                    <a href="{% url 'profile_posts' %}" class="btn btn-primary mt-2">Your Posts</a>
                 </div>
             </div>
 
