ADD: profile_comments.html

--- a/user_dashboard/templates/user_dashboard/profile.html
+++ b/user_dashboard/templates/user_dashboard/profile.html
@@ -24,7 +24,7 @@
                     <a href="{% url 'upload_profile_pic' %}" class="btn btn-primary mt-2">Profile Picture</a>
                 </div>
                 <div class="col-12 col-md-6">
-                    <a href="#" class="btn btn-primary mt-2">Your Likes</a>
+                    <a href="{% url 'profile_likes' %}" class="btn btn-primary mt-2">Your Likes</a>
                 </div>
             </div>
 
