ADD: contact app with form

--- a/user_dashboard/templates/user_dashboard/profile.html
+++ b/user_dashboard/templates/user_dashboard/profile.html
@@ -17,6 +17,11 @@
                 Your profile is a reflection of your
                 journey on our platform, and we're thrilled to have you here!
             </p>
+            <p>
+                <i>
+                    If you need to change your profile picture please contact admin through contact admin button below.
+                </i>
+            </p>
         </div>
         <div class="container">
             <div class="row justify-content-between text-center">
@@ -39,7 +44,7 @@
                     <a href="{% url 'profile_comments' %}" class=" btn btn-primary mt-2">Your Comments</a>
                 </div>
                 <div class="col-12 col-md-6">
-                    <a href="#" class="btn btn-primary mt-2">Contact Admin</a>
+                    <a href="{% url 'contact_admin' %}" class="btn btn-primary mt-2">Contact Admin</a>
                 </div>
             </div>
         </div>
