--- a/templates/base.html
+++ b/templates/base.html
@@ -153,7 +153,7 @@
                     <p class="m-sm text-center">
                         <a href="#" class="footer-links text-decoration-none">About us</a>
                         <br>
-                        <a href="#" class="footer-links text-decoration-none">Contact us</a>
+                        <a href="{% url 'contact' %}" class="footer-links text-decoration-none">Contact us</a>
                     </p>
                 </div>
             </div>
