ADD: about app with about us page

--- a/templates/base.html
+++ b/templates/base.html
@@ -151,7 +151,7 @@
                 </div>
                 <div class="col-sm">
                     <p class="m-sm text-center">
-                        <a href="#" class="footer-links text-decoration-none">About us</a>
+                        <a href="{% url 'about' %}" class="footer-links text-decoration-none">About us</a>
                         <br>
                         <a href="{% url 'contact' %}" class="footer-links text-decoration-none">Contact us</a>
                     </p>
