--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,20 +4,17 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<section class="container text-center">
+<div class="container text-center">
     <h1 class="mt-3">Rate The Work</h1>
     <form class="d-flex mt-5 h-100 " role="search" method="GET" action="{% url 'home' %}">
         <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-primary" type="submit">Search</button>
     </form>
     <div class="page-intro">
-        <p>Welcome to <span class="home-intro-title">Rate the Work</span> a platform where individuals and companies
-            alike
-            can showcase their
-            projects and
-            receive valuable feedback. Whether you're a company looking to display your portfolio or an individual
-            seeking a
-            second opinion on works completed for you, the Rate The Work community is here to assist you.
+        <p>Welcome to <span class="home-intro-title">Rate the Work</span> a platform designed for both individuals
+            and companies to showcase their projects and gather valuable feedback. Whether you're a company eager to
+            display your portfolio or an individual seeking feedback or a second opinion on completed projects for them,
+            then Rate The Work community is here to assist you.
         </p>
         <p>
             Our platform aims to create a collaborative environment where users can share their experiences, insights,
@@ -76,5 +73,5 @@
     </nav>
     {% endif %}
     {% endif %}
-</section>
+</div>
 {% endblock %}
