--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,8 @@
 <div class="container text-center">
     <h1 class="mt-3">Rate The Work</h1>
     <form class="d-flex mt-5 h-100 " role="search" method="GET" action="{% url 'home' %}">
-        <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search"
+            value="{% if query != None %}{{ query }}{% endif %}">
         <button class="btn btn-outline-primary" type="submit">Search</button>
     </form>
     <div class="page-intro">
@@ -62,11 +63,13 @@
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {% if work.has_previous %}
-            <li class="page-item"><a href="?page={{ work.previous_page_number }}" class="page-link">&laquo;
+            <li class="page-item"><a href="?page={{ work.previous_page_number }}&q={{ query }}"
+                    class="page-link">&laquo;
                     Previous</a></li>
             {% endif %}
             {% if work.has_next %}
-            <li class="page-item"><a href="?page={{ work.next_page_number }}" class="page-link">Next &raquo;</a>
+            <li class="page-item"><a href="?page={{ work.next_page_number }}&q={{ query }}" class="page-link">Next
+                    &raquo;</a>
             </li>
             {% endif %}
         </ul>
