--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,8 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!--BOOTSTRAP CSS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!--STYLES-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
@@ -85,17 +85,15 @@
                     </ul>
                     <!-- Profile pic -->
                     {% if user.is_authenticated %}
-                    {% if profile.image %}
                     <a href="{% url 'profile' %}">
-                        <img class="profile-img img-fluid" src="{{ request.user.profile.profile_image.url }}"
-                            alt="user profile pic">
-                    </a>
-                    {% else %}
-                    <a href="{% url 'profile' %}">
+                        {% if "placeholder" in profile.image.url %}
                         <img src="{% static 'images/nobody.jpg' %}" alt="placeholder for profile pic"
                             class="profile-img img-fluid">
+                        {% else %}
+                        <img class="profile-img img-fluid" src="{{ request.user.profile.profile_image.url }}"
+                            alt="user profile pic">
+                        {% endif %}
                     </a>
-                    {% endif %}
                     {% endif %}
                 </div>
             </div>
@@ -161,10 +159,11 @@
     </footer>
 
     <!-- BOOTSTRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-x0Km6V0a+7skBx0pESfKTaSAnzZ5E3IhHUfKWR3uAfCIIhr3D8jFo+fFbcCjHKVf" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 </body>
 
