--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <header>
         {% with request.resolver_match.url_name as url_name %}
         <nav class="navbar navbar-expand-lg">
@@ -45,8 +46,10 @@
                 <!-- Logo -->
                 <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/Site-Logo.jpg' %}"
                         alt="Site logo" class="logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <!-- Navbar Toggler -->
+                <button class="navbar-toggler toggler-color" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <!-- Navigation Links -->
@@ -112,10 +115,12 @@
         </div>
     </header>
 
+
     <main>
         {% block content %}
         {% endblock %}
     </main>
+
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3">
@@ -132,23 +137,23 @@
                     <p class="m-0 text-center text-nowrap">
                         <a href="https://www.facebook.com" target="_blank"
                             aria-label="Facebook - if clicked will open in a new tab"><i
-                                class="fab fa-facebook-square ms-3 text-white social-icons"></i></a>
+                                class="fab fa-facebook-square text-white social-icons"></i></a>
                         <a href="https://twitter.com" target="_blank"
                             aria-label="Twitter - if clicked will open in a new tab"><i
-                                class="fab fa-twitter-square ms-3 text-white social-icons"></i></a>
+                                class="fab fa-twitter-square text-white social-icons"></i></a>
                         <a href="https://www.instagram.com" target="_blank"
                             aria-label="Instagram - if clicked will open in a new tab"><i
-                                class="fab fa-instagram-square ms-3 text-white social-icons"></i></a>
+                                class="fab fa-instagram-square text-white social-icons"></i></a>
                         <a href="https://www.youtube.com" target="_blank"
                             aria-label="Youtube - if clicked will open in a new tab"><i
-                                class="fab fa-youtube-square ms-3 text-white social-icons"></i></a>
+                                class="fab fa-youtube-square text-white social-icons"></i></a>
                     </p>
                 </div>
                 <div class="col-sm">
                     <p class="m-sm text-center">
-                        <a href="{% url 'about' %}" class="footer-links text-decoration-none">About us</a>
+                        <a href="{% url 'about' %}" class="footer-links">About us</a>
                         <br>
-                        <a href="{% url 'contact' %}" class="footer-links text-decoration-none">Contact us</a>
+                        <a href="{% url 'contact' %}" class="footer-links">Contact us</a>
                     </p>
                 </div>
             </div>
