ADD: content to profile page to complete proflie set up

--- a/user_dashboard/templates/user_dashboard/profile.html
+++ b/user_dashboard/templates/user_dashboard/profile.html
@@ -19,7 +19,7 @@
             </p>
             <p>
                 <i>
-                    If you need to change your profile picture please contact admin through contact admin button below.
+                    Please supply a profile picture and the user type int he button below to complete your profile.
                 </i>
             </p>
         </div>
