MAIT: removed Trailing slash on void elements for w3c on base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,14 +5,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Rate The Work | Place to share works created for or by yourself" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rate The Work | Place to share works created for or by yourself">
     <meta name="keywords"
         content="Rate, Work, Projects, Creative Projects, Feedback, Community, Showcase, Portfolio,
-        Art, Design, Photography, Writing, Crafts, DIY, Construction, Collaboration, Innovation, Excellence, Creativity, Review, Second Opinion," />
-    <meta name="author" content="Ben Fashan" />
+        Art, Design, Photography, Writing, Crafts, DIY, Construction, Collaboration, Innovation, Excellence, Creativity, Review, Second Opinion,">
+    <meta name="author" content="Ben Fashan">
     <title>Rate The Work - {% block title %}{% endblock %}</title>
 
     <!--GOOGLE FONTS-->
@@ -34,7 +34,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!--STYLES-->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
