--- a/blog/templates/blog/comment_delete.html
+++ b/blog/templates/blog/comment_delete.html
@@ -3,16 +3,16 @@
 {% block title %}Delete Comment{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container d-flex justify-content-center pt-3">
     <h1 class="text-center mt-3 ">
-        Confirm Comment Deletion
-        <div class="d-flex justify-content-center pt-3">
-            <form method="post" class="text-center">
-                {% csrf_token %}
-                <p>Are you sure you want to delete this comment?</p>
-                <input type="submit" value="Confirm" class="btn btn-primary w-25 ">
-            </form>
-        </div>
+        Confirm Comment Deletion</h1>
+    <div class="d-flex justify-content-center pt-3">
+        <form method="post" class="text-center">
+            {% csrf_token %}
+            <p>Are you sure you want to delete this comment?</p>
+            <input type="submit" value="Confirm" class="btn btn-primary w-25 ">
+        </form>
+    </div>
     </h1>
 </div>
 {% endblock %}
