--- a/blog/templates/blog/work_delete.html
+++ b/blog/templates/blog/work_delete.html
@@ -5,14 +5,13 @@
 {% block content %}
 <div class="container">
     <h1 class="text-center mt-3 ">
-        Confirm Work Deletion
-        <div class="d-flex justify-content-center pt-3">
-            <form method="post" class="text-center">
-                {% csrf_token %}
-                <p>Are you sure you want to delete {{ object.title }}?</p>
-                <input type="submit" value="Confirm" class="btn btn-primary w-25 ">
-            </form>
-        </div>
-    </h1>
+        Confirm Work Deletion</h1>
+    <div class="d-flex justify-content-center pt-3">
+        <form method="post" class="text-center">
+            {% csrf_token %}
+            <p>Are you sure you want to delete {{ object.title }}?</p>
+            <input type="submit" value="Confirm" class="btn btn-primary">
+        </form>
+    </div>
 </div>
 {% endblock %}
