--- a/user_dashboard/templates/user_dashboard/profile_comments.html
+++ b/user_dashboard/templates/user_dashboard/profile_comments.html
@@ -20,7 +20,7 @@
                     <p><strong>For Work:</strong> <a href="{% url 'work_detail' pk=rating.work.pk %}"
                             class="btn btn-primary">{{ rating.work }}</a></p>
                     <p class="text-muted">{{ rating.created_on }}</p>
-                    <p>{{ rating.content | linebreaks }}</p>
+                    {{ rating.content | linebreaks }}
                     <p><strong>Suggested Price:</strong> £{{ rating.suggested_price }}</p>
                     {% if rating.user == user %}
                     <div class="text-center">
