--- a/user_dashboard/templates/user_dashboard/profile_posts.html
+++ b/user_dashboard/templates/user_dashboard/profile_posts.html
@@ -10,9 +10,9 @@
 </div>
 <div class="container d-flex flex-row flex-wrap justify-content-center gap-3 my-3">
     {% for w in user_posts %}
-    <a href="{% url 'work_detail' pk=w.pk %}" class="work" aria-label="Click to view {{ w.title }}">
+    <a href="{% url 'work_detail' pk=w.pk %}" aria-label="Click to view {{ w.title }}">
         <div class="card h-100" style="width: 18rem;">
-            <img src="{{ w.work_image.url }}" class="card-img-top card-front-img img-fluid " alt="{{ w.title }}">
+            <img src="{{ w.work_image.url }}" class="card-img-top card-front-img img-fluid" alt="{{ w.title }}">
             <div class="card-body">
                 <h2 class="card-title">{{ w.title|truncatechars:15 }}</h2>
                 <div>
