--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         Art, Design, Photography, Writing, Crafts, DIY, Construction, Collaboration, Innovation, Excellence, Creativity, Review, Second Opinion,">
     <meta name="author" content="Ben Fashan">
     <title>Rate The Work - {% block title %}{% endblock %}</title>
-
+    {% block extra_css %}
     <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,6 +35,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    {% endblock %}
 </head>
 
 <body>
@@ -161,13 +162,9 @@
             </div>
         </div>
     </footer>
-
     <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 </body>
 
