--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -38,11 +38,11 @@
     <!-- Display search results -->
     {% if query %}
     <h2>Search Results:</h2>
-    <div class="container d-flex flex-row flex-wrap justify-content-center">
+    <div class="container d-flex flex-row flex-wrap justify-content-center gap-3 my-3">
         {% for w in work %}
-        <a href="{% url 'work_detail' pk=w.pk %}" class="work" aria-label="Click to view {{ w.title }}">
-            <div class="card m-3" style="width: 18rem;">
-                <img src="{{ w.work_image.url }}" class="card-img-top card-front-img" alt="{{ w.title }}">
+        <a href="{% url 'work_detail' pk=w.pk %}" aria-label="Click to view {{ w.title }}">
+            <div class="card m-3 h-100" style="width: 18rem;">
+                <img src="{{ w.work_image.url }}" class="card-img-top card-front-img img-fluid" alt="{{ w.title }}">
                 <div class="card-body">
                     <h2 class="card-title">{{ w.title|truncatechars:15 }}</h2>
                     <div>
