--- a/blog/templates/blog/comment_delete.html
+++ b/blog/templates/blog/comment_delete.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
-{% block title %}Delete Comment{% endblock %}
+{% block title %}Delete Rating{% endblock %}
 
 {% block content %}
 <div class="container d-flex justify-content-center pt-3">
     <h1 class="text-center mt-3 ">
-        Confirm Comment Deletion</h1>
+        Confirm Rating Deletion</h1>
 </div>
 <div class="d-flex justify-content-center pt-3">
     <form method="post" class="text-center">
         {% csrf_token %}
-        <p>Are you sure you want to delete this comment?</p>
+        <p>Are you sure you want to delete this rating?</p>
         <input type="submit" value="Confirm" class="btn btn-primary w-25 ">
     </form>
 </div>
