--- a/blog/templates/blog/comment_edit.html
+++ b/blog/templates/blog/comment_edit.html
@@ -6,12 +6,12 @@
 {% load crispy_forms_tags %}
 <div class="container">
     <form method="POST" enctype="multipart/form-data" class="p-2 form">
-        <h1 class="text-center">Edit Comment</h1>
+        <h1 class="text-center">Edit Rating</h1>
         {% csrf_token %}
         {{ form.media }}
         {{ form|crispy }}
         <div class="text-center">
-            <button type="submit" class="btn btn-primary mt-2">Edit Comment</button>
+            <button type="submit" class="btn btn-primary mt-2">Edit Rating</button>
         </div>
     </form>
 </div>
