--- a/user_dashboard/templates/user_dashboard/profile_comments.html
+++ b/user_dashboard/templates/user_dashboard/profile_comments.html
@@ -16,7 +16,7 @@
             </h1>
             <div class="card-body">
                 {% for rating in user_ratings %}
-                <div>
+                <div class="mb-3">
                     <p><strong>For Work:</strong> <a href="{% url 'work_detail' pk=rating.work.pk %}"
                             class="btn btn-primary">{{ rating.work }}</a></p>
                     <p class="text-muted">{{ rating.created_on }}</p>
@@ -29,6 +29,7 @@
                     </div>
                     {% endif %}
                 </div>
+                <hr>
                 {% endfor %}
             </div>
         </div>
