--- a/blog/templates/blog/work_details.html
+++ b/blog/templates/blog/work_details.html
@@ -130,7 +130,8 @@
                     {% endif %}
                 </div>
             </div>
+            {% endif %}
         </div>
-        {% endif %}
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
