ADD: no search matches response to index page

--- a/blog/templates/blog/work_details.html
+++ b/blog/templates/blog/work_details.html
@@ -82,7 +82,7 @@
                         {% endif %}
                     </div>
                     {% empty %}
-                    <p class="text-danger">No comments yet</p>
+                    <p class="text-primary">No comments yet</p>
                     {% endfor %}
                 </div>
             </div>
