--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -55,6 +55,8 @@
                 </div>
             </div>
         </a>
+        {% empty %}
+        <p class="text-primary">No Search matches</p>
         {% endfor %}
     </div>
 
